  problems, failed connectivity, etc). Added disk space/usage information to
  the front-end file manager. Added links to vulnerability and compatibility
  charts onto the front-end homepage.

- [2017.09.27; Minor code change; Maikuolan]: Added a pie chart to the file
  manager, allowing users to visually interpret the footprint imposed by the
  various files attributed to CIDRAM and its components. Also did some general
  refactoring of the front-end code.

- [2017.09.27; Bug-fix; Maikuolan]: See issue #39 (update bug preventing some
  specific components from updating at all).

- [2017.09.29; Sub-minor code change; Maikuolan]: Added internal language
  support for Norwegian (21 language localisations now completed and
  available).

- [2017.10.02; Sub-minor code change; Maikuolan]: Slightly improved the way
  that the front-end logs page behaves.

- [2017.10.03; NEW FEATURE; Maikuolan]: Added a new page to the front-end for
  viewing CIDRAM usage statistics, and a corresponding configuration directive
  to enable/disable tracking CIDRAM usage statistics.

=== Version/Release 1.1.0 ===
MINOR RELEASE.

- [2017.07.29; NEW FEATURES; Maikuolan]: Added the ability to execute closures
  and specific commands when specific conditions are met when using the
  front-end updates page (installing, uninstalling components, etc). Added a
  configuration directive to modify the font magnification for the front-end
  and the Access Denied page. Added information to the front-end homepage about
  latest stable, unstable, and branch versions for CIDRAM and PHP.

- [2017.07.30; Minor code change; Maikuolan]: Added a configuration directive
  for specifying the preferred way to localise numbers when displaying numeric
  information via the front-end and any other relevant means. Number L10N is
  now independent of language choice, and has also been improved upon somewhat.

- [2017.08.14; Sub-minor code change; Maikuolan]: CheckFactors closure slightly