@@ -24,8 +24,8 @@
             {label_fmgr_total_disk_usage}{TotalUsage}<br />
             {label_fmgr_free_space}{FreeSpace}<br />
             {label_fmgr_total_space}{TotalSpace}
-{PieChart}        </div></td></tr>
-{FilesData}
+        </div></td></tr>
+{PieChart}{FilesData}
         </table>
     </td>
 </tr>
