@@ -1,22 +1,0 @@
-            <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-            <script type="text/javascript">
-                google.charts.load('current', {
-                    'packages': ['corechart']
-                });
-                google.charts.setOnLoadCallback(drawChart);
-
-                function drawChart() {
-                    var data = google.visualization.arrayToDataTable([
-                        ['{field_component}', '{field_size_bytes}'],
-{PieChartValues}
-                    ]);
-                    var options = {
-                        title: '{label_fmgr_disk_usage} ({VaultPath})',
-                        sliceVisibilityThreshold: .001,
-                        backgroundColor: 'none'
-                    };
-                    var chart = new google.visualization.PieChart(document.getElementById('piechart'));
-                    chart.draw(data, options);
-                }
-            </script>
-            <div id="piechart" style="width:100%;height:300px"></div>
